--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt=""></a>
+            <a href="index.html" class="logo"><img id="logoURL" src="assets/img/logo2.png" alt=""></a>
             <h1 class="logo"><a href="index.html">OnePage MP</a></h1>
 
 
