--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo"><img id="logoURL" src="assets/img/logo2.png" alt=""></a>
-            <h1 class="logo"><a href="index.html">OnePage MP</a></h1>
+            <a href="index.html" class="logo"><img id="logoURL" class="" src="assets/img/logo2.png" alt=""></a>
+            <h1 class="logo"><a href="index.html">FamilyClinic</a></h1>
 
 
 
@@ -97,8 +97,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
-            <h1>One Page <span>Mini Proiect</span></h1>
-            <h2>LinkAcademy - Curs Advanced CSS folosind Bootstrap</h2>
+            <h1>Your Health <span>is Our Prioriti</span></h1>
+            <h2>Start the online consultation right here</h2>
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Start</a>
             </div>
@@ -679,7 +679,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="dev/js/main.js"></script>
 </body>
 
 </html>
